Fixed menu for mobile navigation

--- a/weather.html
+++ b/weather.html
@@ -51,7 +51,7 @@
 
 			<div class="hero" data-bg-image="images/banner.png">
 				<div class="container">
-					<form action="javascript:getWeather()" onclick="getForecast()" class="find-location">
+					<form onclick="getWeatherAndForecast()" class="find-location">
 						<input id = "city-input" type="text" placeholder="Find your location...">
 						<input type="submit" value="Find">
 					</form> 
@@ -296,6 +296,7 @@
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/plugins.js"></script>
 		<script src="app.js"></script>
+		<script src="js/menu.js"></script>
 		
 	</body>
 
