--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 		<div class="site-content">
 			<div class="site-header">
 				<div class="container">
-					<a href="index.html" class="branding">
+					<a href="weather.html" class="branding">
 						<img src="images/logo.png" alt="" class="logo">
 						<div class="logo-type">
 							<h1 class="site-title">Weather</h1>
@@ -55,7 +55,7 @@
 			<main class="main-content">
 				<div class="container">
 					<div class="breadcrumb">
-						<a href="index.html">Home</a>
+						<a href="weather.html">Home</a>
 						<span>About</span>
 					</div>
 				</div>
@@ -138,6 +138,7 @@
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
 		<script src="js/plugins.js"></script>
+		<script src="js/menu.js"></script>
 		<script src="js/app.js"></script>
 		
 	</body>
