--- a/weathermaps.html
+++ b/weathermaps.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Compass Starter by Ariona, Rian</title>
+		<title>Weather</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+		<link rel="icon" type="image/x-icon" href="images/logo.png">
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="style.css">
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
