--- a/weather.html
+++ b/weather.html
@@ -1,99 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
-		
-		<title>Weather</title>
-		<!-- <link rel="icon"  href="http://www.example.com/myicon.ico"/> -->
-		<!-- Loading third party fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
-		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-		<!-- Loading main css file -->
-		<link rel="stylesheet" href="style.css">
-		<!-- <a href="https://www.flaticon.com/free-icons/weather" title="weather icons">Weather icons created by iconixar - Flaticon</a> -->
-		<link rel="icon" type="image/x-icon" href="images/logo.png">
-		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-		<!--[if lt IE 9]><![endif]-->
-		<script src="js/ie-support/html5.js"></script>
-		<script src="js/ie-support/respond.js"></script>
-		
-	</head>
-	<body>
-		
-		<div class="site-content">
-			<div class="site-header">
-				<div class="container">
-					<a href="weather.html" class="branding">
-						<img src="images/logo.png" alt="" class="logo">
-						<div class="logo-type">
-							<h1 class="site-title">Weather</h1>
-							<small class="site-description"></small>
-						</div>
-					</a>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-					<!-- Default snippet for navigation -->
-					<div class="main-navigation">
-						<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
-						<ul class="menu">
-							<li class="menu-item current-menu-item"><a href="weather.html">Home</a></li>
-							<li class="menu-item"><a href="weathermaps.html">Weather Maps</a></li>
-							<!--<li class="menu-item"><a href="live-cameras.html">Live cameras</a></li>-->
-							<li class="menu-item"><a href="instructor.html">Instructor Application</a></li>
-							<li class="menu-item"><a href="about.html">About</a></li> 
-						</ul> <!-- .menu -->
-					</div> <!-- .main-navigation -->
-					<div class="mobile-navigation"></div>
-				</div>
-			</div> <!-- .site-header -->
+	<title>Weather</title>
+	<!-- <link rel="icon"  href="http://www.example.com/myicon.ico"/> -->
+	<!-- Loading third party fonts -->
+	<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
+	<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-				<div class="hero" data-bg-image="images/banner.png">
-					<div class="container">
+	<!-- Loading main css file -->
+	<link rel="stylesheet" href="style.css">
+	<!-- <a href="https://www.flaticon.com/free-icons/weather" title="weather icons">Weather icons created by iconixar - Flaticon</a> -->
+	<link rel="icon" type="image/x-icon" href="images/logo.png">
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<!--[if lt IE 9]><![endif]-->
+	<script src="js/ie-support/html5.js"></script>
+	<script src="js/ie-support/respond.js"></script>
 
-						<form action="javascript:getWeatherAndForecast()"  class="find-location">
+</head>
 
-							<input id = "city-input" type="text" placeholder="Find your location...">
-							<input type="submit" value="Find">
-						</form> 
+<body>
+
+	<div class="site-content">
+		<div class="site-header">
+			<div class="container">
+				<a href="weather.html" class="branding">
+					<img src="images/logo.png" alt="" class="logo">
+					<div class="logo-type">
+						<h1 class="site-title">Weather</h1>
+						<small class="site-description"></small>
 					</div>
-				</div>
-			<div class="forecast-table">
-				<div class="container">
-					<div class="forecast-container">
-						<div class="today forecast">
-							<div class="forecast-header">
-								<div id="day" class="day"></div>
-								<div id="date" class="date"></div>
-							</div> <!-- .forecast-header -->
-							<div class="forecast-content">
-								<div id="city" class="location"></div>
-								<div class="degree">
-									<div id="temp" class="num"></div>
-									
-									<!-- <div class="forecast-icon">
+				</a>
+
+				<!-- Default snippet for navigation -->
+				<div class="main-navigation">
+					<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
+					<ul class="menu">
+						<li class="menu-item current-menu-item"><a href="weather.html">Home</a></li>
+						<li class="menu-item"><a href="weathermaps.html">Weather Maps</a></li>
+						<!--<li class="menu-item"><a href="live-cameras.html">Live cameras</a></li>-->
+						<li class="menu-item"><a href="instructor.html">Instructor Application</a></li>
+						<li class="menu-item"><a href="about.html">About</a></li>
+					</ul> <!-- .menu -->
+				</div> <!-- .main-navigation -->
+				<div class="mobile-navigation"></div>
+			</div>
+		</div> <!-- .site-header -->
+
+		<div class="hero" data-bg-image="images/banner.png">
+			<div class="container">
+
+				<form action="javascript:getWeatherAndForecast()" class="find-location">
+
+					<input id="city-input" type="text" placeholder="Find your location...">
+					<input type="submit" value="Find">
+				</form>
+			</div>
+		</div>
+		<div class="forecast-table">
+			<div class="container">
+				<div class="forecast-container">
+					<div class="today forecast">
+						<div class="forecast-header">
+							<div id="day" class="day"></div>
+							<div id="date" class="date"></div>
+						</div> <!-- .forecast-header -->
+						<div class="forecast-content">
+							<div id="city" class="location"></div>
+							<div class="degree">
+								<div id="temp" class="num"></div>
+
+								<!-- <div class="forecast-icon">
 										<img src="images/icons/icon-1.svg" alt="" width=90>
 									</div>	 -->
-								</div>
-								<span id="1h"></span>
-								<span id="wind"></span>
-								<span id="deg"></span>
 							</div>
+							<span id="1h"></span>
+							<span id="wind"></span>
+							<span id="deg"></span>
 						</div>
-						<div class="forecast" id="forecast-container">
-							<div class="forecast-header">
-								<!-- <div id="timeContainer" class="day">Tuesday</div> -->
-							</div> <!-- .forecast-header -->
-							<div class="forecast-content">
-								<div class="forecast-icon">
-									<!-- <img src="images/icons/icon-3.svg" alt="" width=48> -->
-								</div>
-								<!-- <div class="degree">23<sup>o</sup>C</div> -->
-								<!-- <small>18<sup>o</sup></small> -->
+					</div>
+					<div class="forecast" id="forecast-container">
+						<div class="forecast-header">
+							<!-- <div id="timeContainer" class="day">Tuesday</div> -->
+						</div> <!-- .forecast-header -->
+						<div class="forecast-content">
+							<div class="forecast-icon">
+								<!-- <img src="images/icons/icon-3.svg" alt="" width=48> -->
 							</div>
+							<!-- <div class="degree">23<sup>o</sup>C</div> -->
+							<!-- <small>18<sup>o</sup></small> -->
 						</div>
-						<!-- <div class="forecast">
+					</div>
+					<!-- <div class="forecast">
 							<div class="forecast-header">
 								<div class="day">Wednesday</div>
 							</div> 
@@ -153,10 +155,10 @@
 								<small>18<sup>o</sup></small>
 							</div>
 						</div> -->
-					</div>
 				</div>
 			</div>
-			<!-- <main class="main-content">
+		</div>
+		<!-- <main class="main-content">
 				<div class="fullwidth-block">
 					<div class="container">
 						<h2 class="section-title">Live cameras</h2>
@@ -272,9 +274,9 @@
 				</div>
 			</main> .main-content -->
 
-			<footer class="site-footer">
-				<div class="container">
-					<!-- <div class="row">
+		<footer class="site-footer">
+			<div class="container">
+				<!-- <div class="row">
 						<div class="col-md-8">
 							<form action="#" class="subscribe-form">
 								<input type="text" placeholder="Enter your email to subscribe...">
@@ -291,16 +293,17 @@
 						</div>
 					</div> -->
 
-					<p class="colophon">Copyright 2023 Springboot WeatherApp using OpenWeather API running on Azure Cloud. Designed by Themezy. All rights reserved</p>
-				</div>
-			</footer> <!-- .site-footer -->
-		</div>
-		
-		<script src="js/jquery-1.11.1.min.js"></script>
-		<script src="js/plugins.js"></script>
-		<script src="app.js"></script>
-		<script src="js/menu.js"></script>
-		
-	</body>
+				<p class="colophon">Copyright 2023 Springboot WeatherApp using OpenWeather API running on Azure Cloud.
+					Designed by Themezy. All rights reserved</p>
+			</div>
+		</footer> <!-- .site-footer -->
+	</div>
+
+	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="app.js"></script>
+	<script src="js/menu.js"></script>
+
+</body>
 
 </html>
